function working but too low results (to be checked)

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -474,39 +474,79 @@ comparison_delta_singlebhd_ar <-
 
 
 ```{r comparison deaths lifetable}
- bestcost::compare_deaths_lifetable_rr(
-      exp = c(8, 9, 10), # Fake data just for testing purposes
-      prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
-      cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
-      rr = unlist(input_data_mortality[i,
-                                        c("rr_mean", "rr_lowci", "rr_highci")]),
-      rr_increment = 10, 
-      erf_shape = "log_linear",
-      first_age_pop_1 = 0,
-      last_age_pop_1 = 99,
-      interval_age_pop_1 = 1,
-      prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
-      prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
-      prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
-      prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-      population_male_1 = lifetable_withPopulation[["male"]]$population, 
-      population_female_1 = lifetable_withPopulation[["female"]]$population, 
-      year_of_analysis_1 = 2019, 
-      first_age_pop_2 = 0,
-      last_age_pop_2 = 99,
-      interval_age_pop_2 = 1,
-      prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural+0.01,
-      prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural+0.02,
-      prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total+0.03,
-      prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total+0.04,
-      population_male_2 = lifetable_withPopulation[["male"]]$population+200, 
-      population_female_2 = lifetable_withPopulation[["female"]]$population+300, 
-      year_of_analysis_2 = 2021, 
-      info_1 = input_data_mortality$pollutant[i],
-      info_2 = input_data_mortality$pollutant[i], 
-      min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i],
-      max_age = 99)
-      # max_age = if(is.na(input_data_mortality$max_age[i])) NULL else input_data_mortality$max_age[i])
+ 
+comparison_delta_lifetable_rr <-
+  bestcost::compare_deaths_lifetable_rr(
+    comparison_method = "delta",
+    exp_1 = 8.85, # Fake data just for testing purposes
+    prop_pop_exp_1 = 1, # Fake data just for testing purposes
+    exp_2 = 6, # Fake data just for testing purposes
+    prop_pop_exp_2 = 1, # Fake data just for testing purposes
+    cutoff = 5,   # PM2.5=5, WHO AQG 2021 
+    rr = c(1.118, 1.060, 1.179),
+    rr_increment = 10, 
+    erf_shape = "log_linear",
+    first_age_pop_1 = 0,
+    last_age_pop_1 = 99,
+    interval_age_pop_1 = 1,
+    prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
+    prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
+    prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
+    prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
+    population_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    year_of_analysis_1 = 2019, 
+    first_age_pop_2 = 0,
+    last_age_pop_2 = 99,
+    interval_age_pop_2 = 1,
+    prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
+    prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
+    prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
+    prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
+    population_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    year_of_analysis_2 = 2021, 
+    info_1 = input_data_mortality$pollutant[i],
+    info_2 = input_data_mortality$pollutant[i], 
+    min_age = 30,
+    max_age = NULL)
+    # max_age = if(is.na(input_data_mortality$max_age[i])) NULL else input_data_mortality$max_age[i])
+
+comparison_pif_lifetable_rr <-
+  bestcost::compare_deaths_lifetable_rr(
+    comparison_method = "pif",
+    exp_1 = 8.85, # Fake data just for testing purposes
+    prop_pop_exp_1 = 1, # Fake data just for testing purposes
+    exp_2 = 6, # Fake data just for testing purposes
+    prop_pop_exp_2 = 1, # Fake data just for testing purposes
+    cutoff = 5,   # PM2.5=5, WHO AQG 2021 
+    rr = c(1.118, 1.060, 1.179),
+    rr_increment = 10, 
+    erf_shape = "log_linear",
+    first_age_pop_1 = 0,
+    last_age_pop_1 = 99,
+    interval_age_pop_1 = 1,
+    prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
+    prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
+    prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
+    prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
+    population_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    year_of_analysis_1 = 2019, 
+    first_age_pop_2 = 0,
+    last_age_pop_2 = 99,
+    interval_age_pop_2 = 1,
+    prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
+    prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
+    prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
+    prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
+    population_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    year_of_analysis_2 = 2021, 
+    info_1 = NULL,
+    info_2 = NULL, 
+    min_age = 30,
+    max_age = NULL)
 ```
 
 
