--- a/r_package/testing/Preparation of input data.Rmd
+++ b/r_package/testing/Preparation of input data.Rmd
@@ -16,10 +16,8 @@ rm(list = ls())
 
 # Load required packages
 
-# to assess performance
-library(profvis)
-library(bench)
-library(microbenchmark)
+# to read data
+library(readr)
 
 # to manipulate data
 library(readxl)
@@ -31,16 +29,10 @@ library(tibble)
 
 library(zoo)
 
-# to visualize results
-library(ggplot2)
 
 ## to export tables in excel format
 library(openxlsx)
 
-## to load own packages
-library(credentials)
-library(gitcreds)
-library(devtools)
 ```
 
 ```{r Useful variables}
@@ -111,8 +103,10 @@ paste_round_CI <-
 # Define function to re-scale the RR regarding the considered increment
 rescale_rr_increment <- 
   function(rr, increment_original, increment_target){
+
     rescaled_increment <- 
       exp(log(rr) * increment_target / increment_original)
+ 
   }
 
 # Conversion factor for PM fraction
@@ -255,7 +249,89 @@ airqplus_deaths_pop_singleYear <-
   read.csv2("../testing/input/life_tables/airqplus_manual_age0to14_singleYear.csv")
 ```
 
-# Edit input data
+# Digest input data from AirQ+
+```{r}
+airqplus_morb_export <-
+  # Read csv file
+  readr::read_delim("../testing/airqplus_cases/Impact Assessment - Switzerland (PM2.5)_ALRI_2019.csv",
+                    delim = ";",
+                    col_types = cols())%>%
+  # Rename variables
+  setNames(c("variable", "value"))%>%
+  dplyr::rowwise()%>%
+  # Add and edit columns
+  dplyr::mutate(
+    # To identify the sections in the table (all capital letters)
+    section_break = !stringr::str_detect(variable, "[[:lower:]]") & stringr::str_detect(variable, "[[:alpha:]]"),
+    # To give section name to the first row (replacing empty spaces with _ and making lower case)
+    section_name = ifelse(section_break, gsub(" ", "_", tolower(variable)), NA))%>%
+  # Stop rowwise
+  dplyr::ungroup()%>%
+  # Remove line breaks
+  dplyr::mutate(
+    section_name = gsub("\r", "", section_name))%>%
+  # Fill the NAs in section_name with the first non-NA above
+  tidyr::fill(section_name) %>%
+  # Remove the rows with the section name (not needed anymore since they are in a column now)
+  dplyr::filter(!section_break)%>%
+  # Remove column section_break (not needed anymore because section_name is defined)
+  dplyr::select(-section_break) 
+
+
+# The results need to editing
+airqplus_morb_output <- 
+   airqplus_morb_export %>%
+  # Keep only rows from output
+  dplyr::filter(
+    section_name %in% c("evaluation_results")) %>%
+  # Remove rows with NA
+  na.omit() %>%
+  # Split columns that are separated by ;
+  tidyr::separate( 
+      col = value,
+      into = c("value_central", "value_lower", "value_upper"))%>%
+  # Remove the first row without numeric value
+  dplyr::slice(-1) %>%
+  # Make the table longer to fit into the same structrue as the input table
+  tidyr::pivot_longer(cols = starts_with("value_"), 
+                      names_to = "suffix",
+                      names_prefix = "value_",
+                      values_to = "value") %>%
+  # Paste columns variable and suffix to get the specific resulty by CI
+  tidyr::unite("variable", variable, suffix)
+
+
+airqplus_morb <- 
+  airqplus_morb_export %>%
+  # Keep only rows from input
+  dplyr::filter(
+    section_name %in% 
+      c("analysis_properties", "pollution_concentration", "evaluation_parameters")) %>%
+  # Add rows of results
+  dplyr::bind_rows(airqplus_morb_output)%>%
+  # Edit string of variable to make it standard
+  dplyr::mutate(
+    # Remove : or parenthesis
+    variable = gsub(":|\\(|\\)", "", variable),
+    # no capital letters
+    variable = tolower(variable),
+    # Replace space with _
+    variable = gsub(" ", "_", variable ),
+    #Replace - with _
+    variable = gsub("-", "_", variable))%>%
+  # Pivot wider to have specific format for each value
+  dplyr::select(variable, value)%>%
+  tidyr::pivot_wider(names_from = variable, 
+                     values_from = value)%>%
+  # Convert to numeric
+  dplyr::mutate(across(-c(analysis_name, type, pollutant, location,analyis_comment, evaluation_type, evaluation_name, health_endpoint), as.numeric))
+
+
+```
+
+
+
+# Edit single input data
 
 ## RR data
 ```{r Edit RR (rescale inclusive)}
@@ -675,6 +751,7 @@ cutoff_data <-
   
 ```
 
+# Misc
 ```{r Create Codebook}
 # Do not forget yll
 codebook <- unique(bhd_data[, c("outcome_id", "mort_morb")]) 
@@ -719,20 +796,21 @@ input_data_mortality <-
 
 ```{r Export environment}
 # Keep only variables/functions that will be used in "testing_Rpackage.Rmd"
-rm(list=setdiff(ls(), c(
-                        # Data
-                        "airqplus_deaths_pop_multipleYear",
-                        "codebook",
-                        "input_data_morbidities",
-                        "input_data_mortality",
-                        "lifetable_airqplus",
-                        "lifetable_withPopulation",
-                        "rr_data",
-                        # Values (keep none)
-                        # Functions
-                        "paste_round_CI",
-                        "round_keeping0"
-                        )))
+rm(list=setdiff(ls(), 
+                c(# Data
+                  "airqplus_morb",
+                  "airqplus_deaths_pop_multipleYear",
+                  "codebook",
+                  "input_data_morbidities",
+                  "input_data_mortality",
+                  "lifetable_airqplus",
+                  "lifetable_withPopulation",
+                  "rr_data",
+                  # Values (keep none)
+                  # Functions
+                  "paste_round_CI",
+                  "round_keeping0"
+                  )))
 save.image(file = "../testing/input/input_data_for_testing_Rpackage.RData")
 ```
 
