--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -128,7 +128,7 @@ for(i in 12){ # runs loop only for health outcome "asthma incidence 20+"
     cutoff = input_data_morbidities$cutoff[i],    # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
     bhd = input_data_morbidities$bhd_absolute[i],
     rr = unlist(input_data_morbidities[i, 
-                            c("rr_mean", "rr_lowci", "rr_highci")]),
+                            c("rr_central", "rr_lower", "rr_upper")]),
     rr_increment = 10, 
     erf_shape = "log_linear", 
     info = data.frame(pollutant = input_data_morbidities$pollutant[i], 
@@ -139,26 +139,6 @@ for(i in 12){ # runs loop only for health outcome "asthma incidence 20+"
 
 ```
 
-```{r impact morbidity}
-impact_morbidities_raw <- list()
-
-test_1bhd_1exp <-
-  bestcost::attribute_health_singlebhd_rr(
-    #dw = 0.133, # for health state "Asthma, uncontrolled" (cf. bestcost::disability_weights)
-    exp = airqplus_input_morb$value[airqplus_input_morb$section_name %in% "evaluation_parameters" &
-                                      airqplus_input_morb$variable %in% concentration],  # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
-    cutoff = input_data_morbidities$cutoff[i],    # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
-    bhd = input_data_morbidities$bhd_absolute[i],
-    rr = unlist(input_data_morbidities[i, 
-                            c("rr_mean", "rr_lowci", "rr_highci")]),
-    rr_increment = 10, 
-    erf_shape = "log_linear", 
-    info = data.frame(pollutant = input_data_morbidities$pollutant[i], 
-                      outcome = input_data_morbidities$outcome_metric[i]))
-
-
-
-```
 
 
 ```{r morbidity using exposure distribution}
@@ -211,7 +191,7 @@ yld_test <- bestcost::attribute_yld_rr(
   prop_pop_exp = c(0.2, 0.2, 0.6),
   cutoff = input_data_morbidities$cutoff[12],    # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
   bhd = input_data_morbidities$bhd_absolute[12],
-  rr = unlist(input_data_morbidities[12, c("rr_mean", "rr_lowci", "rr_highci")]), # RR for asthma incidence for adults
+  rr = unlist(input_data_morbidities[12, c("rr_central", "rr_lower", "rr_upper")]), # RR for asthma incidence for adults
   rr_increment = 10, 
   erf_shape = "log_linear", 
   info_pollutant = input_data_morbidities$pollutant[12], 
@@ -234,7 +214,7 @@ impact_yll_expDistribution_raw[[input_data_mortality$year[2]]][[input_data_morta
       prop_pop_exp = 1,
       # prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
-      rr = unlist(input_data_mortality[2, c("rr_mean", "rr_lowci", "rr_highci")]),
+      rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]),
       rr_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -270,7 +250,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
       rr = unlist(input_data_mortality[i,
-                                        c("rr_mean", "rr_lowci", "rr_highci")]),
+                                        c("rr_central", "rr_lower", "rr_upper")]),
       rr_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -306,7 +286,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
       exp = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[i], # WHO AQG 2021 
-      rr = unlist(input_data_mortality[i, c("rr_mean", "rr_lowci", "rr_highci")]),
+      rr = unlist(input_data_mortality[i, c("rr_central", "rr_lower", "rr_upper")]),
       rr_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -341,7 +321,7 @@ for(i in 2){                           # Use this if you want to evaluate only o
     exp = input_data_mortality$exp[i], # PM2.5=8.30=limit LRV CH, NO2=16.32=mean conc. in CH in 2019
     cutoff = input_data_mortality$cutoff[i],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
     rr = unlist(input_data_mortality[i,
-                                      c("rr_mean", "rr_lowci", "rr_highci")]),
+                                      c("rr_central", "rr_lower", "rr_upper")]),
     rr_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop = 0,
@@ -408,10 +388,10 @@ head(impact_mortality_raw[["2019"]][["PM2.5_premature deaths_all causes_adults_m
 #                     impact_rounded_ref, impact_rounded_whoaqg21, impact_rounded_diff), names_from = ci) %>%
 #   # Paste the CIs
 #   dplyr::mutate(
-#     rr_meanCI = paste_round_CI(rr_mean, rr_lowci, rr_highci, 3),
-#     impact_ref_meanCI = paste_round_CI(impact_ref_mean, impact_ref_lowci, impact_ref_highci, 3),
-#     impact_whoaqg21_meanCI = paste_round_CI(impact_whoaqg21_mean, impact_whoaqg21_lowci, impact_whoaqg21_highci, 0),
-#     impact_diff_meanCI = paste_round_CI(impact_diff_mean, impact_diff_lowci, impact_diff_highci, 0),
+#     rr_centralCI = paste_round_CI(rr_central, rr_lower, rr_upper, 3),
+#     impact_ref_centralCI = paste_round_CI(impact_ref_central, impact_ref_lower, impact_ref_upper, 3),
+#     impact_whoaqg21_centralCI = paste_round_CI(impact_whoaqg21_central, impact_whoaqg21_lower, impact_whoaqg21_upper, 0),
+#     impact_diff_centralCI = paste_round_CI(impact_diff_central, impact_diff_lower, impact_diff_upper, 0),
 #     # bhd as NA just to match with structure of morbidities
 #     bhd = NA) %>%
 # 
@@ -419,7 +399,7 @@ head(impact_mortality_raw[["2019"]][["PM2.5_premature deaths_all causes_adults_m
 #   # Left join to add further information on RR
 #   dplyr::left_join(., rr_data, 
 #                    by = c("info_pollutant" = "pollutant", "rr_id", "rr_increment",
-#                           paste0("rr_", c("mean", "lowci", "highci"))),
+#                           paste0("rr_", c("central", "lower", "upper"))),
 #                    relationship = "many-to-one")%>%
 #   # Change outcome_id to ensure match with codebook
 #   dplyr::mutate(
@@ -428,10 +408,10 @@ head(impact_mortality_raw[["2019"]][["PM2.5_premature deaths_all causes_adults_m
 #                         outcome_id)) %>%
 #   # Order columns 
 #   dplyr::select(info_pollutant, ref, outcome_id, rr_source, 
-#                 term, bhd, rr_meanCI, 
-#                 contains("impact_diff_meanCI"),
-#                 contains("impact_ref_meanCI"), 
-#                 impact_whoaqg21_meanCI,
+#                 term, bhd, rr_centralCI, 
+#                 contains("impact_diff_centralCI"),
+#                 contains("impact_ref_centralCI"), 
+#                 impact_whoaqg21_centralCI,
 #                 everything()) %>%
 #   # Order rows by label
 #   dplyr::arrange(desc(info_pollutant), ref, outcome_id, rr_source)
@@ -445,7 +425,7 @@ yld <- attribute_yld_lifetable_rr(
   prop_pop_exp = 1,
   # prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
   cutoff = input_data_mortality$cutoff[2],
-  rr = unlist(input_data_mortality[2, c("rr_mean", "rr_lowci", "rr_highci")]),
+  rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]),
   rr_increment = 10, 
   erf_shape = "log_linear",
   first_age_pop = 0,last_age_pop = 99,
